packages/errors/test/__snapshots__/RENAMED_CONFIG_OPTION.ansi
[31mThe [33moldName[39m[31m configuration option you have supplied has been renamed.[39m
[31m[39m
[31mPlease rename [33moldName[39m[31m to [95mnewName[39m[31m[39m